Started adding create file abilities, llm dir

--- a/reference.ipynb
+++ b/reference.ipynb
@@ -85,6 +85,96 @@
     "\n",
     "console.print(title)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Advance to next page of results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold; text-decoration: underline\">Python Tutorials – Real Python</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;4;32mPython Tutorials – Real Python\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "links = web_search.next_page()\n",
+    "\n",
+    "web_page = web_search.open(links[0])\n",
+    "title = web_page.title\n",
+    "body = web_page.body\n",
+    "\n",
+    "console.print(title)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Return to previous page of results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold; text-decoration: underline\">Welcome to Python.org</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;4;32mWelcome to Python.org\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "links = web_search.prev_page()\n",
+    "\n",
+    "web_page = web_search.open(links[0])\n",
+    "title = web_page.title\n",
+    "body = web_page.body\n",
+    "\n",
+    "console.print(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# agent = Agent(\n",
+    "#     tools = []...    \n",
+    "# )"
+   ]
   }
  ],
  "metadata": {
